--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "^1.3.3",
     "yargs": "^17.1.1"
   },
   "name": "coinchart",
   "description": "Display cryptocurrency candlestick charts in your terminal",
   "version": "1.0.5",
-  "main": "index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
+  "types": "dist/index.d.ts",
   "bin": {
-    "coinchart": "./index.js"
+    "coinchart": "src/index.js"
   },
   "scripts": {
+    "build": "tsup src/index.ts --format esm --dts",
+    "lint": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,12 +33,21 @@
     "chart",
     "cryptocurrency",
     "graph",
-    "bitcoin"
+    "bitcoin",
+    "bitcoin graph",
+    "crypto"
   ],
   "author": "Damian Macdermott",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dmacdermott/coinchart/issues"
   },
-  "homepage": "https://github.com/dmacdermott/coinchart#readme"
+  "homepage": "https://github.com/dmacdermott/coinchart#readme",
+  "devDependencies": {
+    "@changesets/cli": "^2.26.0",
+    "@types/node": "^18.13.0",
+    "@types/yargs": "^17.0.22",
+    "tsup": "^6.6.0",
+    "typescript": "^4.9.5"
+  }
 }
