fix: bin dir and publish workflow

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
       "require": "./dist/index.js"
     }
   },
-  "types": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "bin": {
-    "coinchart": "src/index.js"
+    "coinchart": "./dist/index.js"
   },
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts",
+    "release": "pnpm build && pnpm changeset publish",
     "lint": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
