--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "coinchart",
   "description": "Display cryptocurrency candlestick charts in your terminal",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "type": "module",
   "exports": {
     ".": {
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts",
-    "release": "pnpm build && pnpm changeset publish",
+    "release": "pnpm build && changeset publish",
     "lint": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
